Forbidden url añadido

--- a/base_project/src/index.html
+++ b/base_project/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Pagina sencilla Angular" />
+  <meta name="author" content="Mario Ezquerro" />
   <title>Faraday</title>
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -23,9 +23,7 @@
   <app-root></app-root>
 
   <script src="scripts.js"></script>
-  <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- SB Forms JS -->
   <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
