--- a/base_project/src/index.html
+++ b/base_project/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Mario Ezquerro" />
   <title>Faraday</title>
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
